<resources>
    <string name="step_1">Step 1:</string>
    <string name="a_text1">Manage your money and keep on top of your debt in just a few steps</string>
    <string name="a_text2">Simply follow along with the guided set up process</string>
    <string name="a_text3">Go to the Home Page to make income and spending entries, track your credit card transactions, and watch your weekly spending limits</string>
    <string name="a_text4">MYnance will let you know how much money in your bank account is actually available for spending at any given time</string>
    <string name="a_text5">MYnance will help you keep on top of your credit card spending so you avoid getting into consumer debt</string>
    <string name="a_text6">Visit the \'Help\' section if you need more guidance</string>
    <string name="add">add</string>
    <string name="add_item">Click here to add another item</string>
    <string name="adjust_income">adjust income</string>
    <string name="adjust_expenses">adjust expenses</string>
    <string name="already_spent">already spent</string>
    <string name="amount">Amount</string>
    <string name="analysis_adjustments">Analysis and adjustments (if necessary)</string>
    <string name="another_bill">add another bill</string>
    <string name="another_debt">add another debt</string>
    <string name="another_income">add another income category</string>
    <string name="another_savings">add another savings</string>
    <string name="app_name">MYnance</string>
    <string name="apr">April</string>
    <string name="ask_later">Okay, we\'ll ask you again later.</string>
    <string name="aug">August</string>
    <string name="available_to_spend">Available to spend:</string>
    <string name="lets_get_real">Let\'s get real!</string>
    <string name="b2_text1">MYnance is a real-world app, so no tedious budgeting here. MYnance will help you make sure you\'re not over-spending or racking up debt.</string>
    <string name="b2_text2">To get started, you\'ll enter some quick estimates, but as you use the app, MYnance will update those numbers with actual data for more accuracy.</string>
    <string name="b2_text3">MYnance will use that info to reserve money in your main bank account to pay bills and let you know how much is left for you to spend on other things.</string>
    <string name="b2_text4">First, set up each of your sources of income separately in the following screen.</string>
    <string name="b3_text1">You\'ll tell us about your bills next. Bills are payments you regularly make.</string>
    <string name="b3_text3">Bills DO include items that are necessary living expenses (groceries, rent, insurance, etc.) and obligations (memberships, yearly vehicle registration costs, etc.).</string>
    <string name="b3_text4">Bills DO NOT include credit cards or savings. You\'ll set those up separately in another screen.</string>
    <string name="b3_text5">Bills also DO NOT include optional expenses or spending (entertainment, travel, clothing, gifts, etc.).</string>
    <string name="b3_text6">For simplicity, add up amounts for bills that are similar and enter them as one bill. For example, if you pay for swimming lessons and martial arts, enter them as one bill called \'lessons\' or \'kids activities\'.</string>
    <string name="do_include">DO include:</string>
    <string name="necessary_expenses">necessary living expenses</string>
    <string name="regular_payments">regular service payments</string>
    <string name="memberships">memberships/obligations</string>
    <string name="do_not_include">DO NOT include:</string>
    <string name="debts_loans">debts/loans</string>
    <string name="credit_vehicles">credit cards/lines of credit</string>
    <string name="mortgages">mortgages</string>
    <string name="savings_investments">savings/investments</string>
    <string name="unnecessary_spending">unnecessary spending</string>
    <string name="b4_text1">MYnance will help you make a debt repayment plan by calculating debt-free dates for each of your credit cards and lines of credit.</string>
    <string name="b4_text2">Set up each of your credit cards and lines of credit separately, even if you don\'t usually use them or owe any money on them.</string>
    <string name="b4_text3">Set up each of your other debts separately too, including mortgages and personal loans.</string>
    <string name="b5_text1">Savings is any money that you set aside for any reason, whether it\'s short-term (to buy something in particular) or long-term (in case of emergency, for retirement, or for investment).</string>
    <string name="b5_text2">MYnance will help you make a savings plan by calculating the dates that you will achieve your savings goals.</string>
    <string name="thanks">Perfects, thanks!</string>
    <string name="b6_text1">Now that you\'ve entered all that info, MYnance can analyze your spending and flag any issues.</string>
    <string name="b6_text2">You\'ll have an opportunity to make adjustments, if necessary.</string>
    <string name="spending_analysis">Spending Analysis</string>
    <string name="analysis_explanation_2">Ideally, shouldn\'t be using more than 80% of your income for living expenses.</string>
    <string name="anaresult">anaResult</string>
    <string name="ana_res_prt_1">You\'re currently spending about</string>
    <string name="ana_res_part_2">of your income on living expenses.</string>
    <string name="recommended_amt">Congratulations! You\'re spending is right where it should be.</string>
    <string name="higher_than_recommended">Oh oh, you\'re spending is a little higher than it should be.</string>
    <string name="too_high">Warning: You\'re spending is too high!</string>
    <string name="no_adj_nec">No adjustments necessary!</string>
    <string name="may_adj">You may want to make adjustments in one of the areas below.</string>
    <string name="should_adj">You should try to make adjustments in one of the areas below.</string>
    <string name="almost_done">Almost done!</string>
    <string name="what_mynance_does">MYnance will:</string>
    <string name="b7_text1">Let you know how much of your money is available for unnecessary spending.</string>
    <string name="b7_text2">Organize your credit card purchases so you can pay them off quickly and avoid interest charges.</string>
    <string name="b7_text3">Watch your weekly spending in areas identified by you.</string>
    <string name="b7_text4">You don\'t have to use this feature to use the app, but you can identify existing or create new spending categories where you\'d like MYnance to keep an eye on your spending habits.</string>
    <string name="one_more_thing">Just one more thing&#8230;</string>
    <string name="one_more_thing_2">&#8230;and you\'re ready to go!</string>
    <string name="b8_text1">Remember, MYnance is completely secure because it\'s not linked to any outside websites or databases.</string>
    <string name="b8_text2">All your information is stored safely on your own device.</string>
    <string name="b8_text3">And you don\'t need to enter any bank account, credit card numbers, or PINs into the app.</string>
    <string name="b8_text4">You do need to let the app know how much money is in your main bank account today, so it can tell you how much of that money you can spend! Enter it below:</string>
    <string name="bi_annually">Twice a year (2 times/yr)</string>
    <string name="bill_amount">What is the usual amount of this bill?</string>
    <string name="bill_frequency">How often do you pay this bill?</string>
    <string name="bills">Regular Bills:</string>
    <string name="bi_monthly">Twice a month (24 times/yr)</string>
    <string name="bi_weekly">Every 2 weeks (26 times/yr)</string>
    <string name="budget">Budget</string>
    <string name="budget_1">You can create as many expense categories as you like and identify them as either \"needs\" or \"optional\". MYnance will \"reserve\" money for all the \"needs\".</string>
    <string name="budget_2">Simply use the PLUS buttons to add income categories (all your sources of incoming money) and expenses categories (all the things you spend your money on).</string>
    <string name="budget_3">MYnance does it for you! As you use the app, it will continually update the numbers and reserve the right amount for paying your bills and alert you if you\'re spending more than you earn.</string>
    <string name="budget_4">1. To make sure you are not spending more money than you earn.</string>
    <string name="budget_5">2. To give you spending guidelines for optional items like gifts, entertainment, clothing, etc.</string>
    <string name="budget_6">MYnance will alert you if your budget does not balance (i.e. if you are spending more money than you earn).</string>
    <string name="budget_7">A realistic budget captures all the major areas of your spending, without getting too bogged down in details.</string>
    <string name="budget_8">For example, you could create a category for \"kids\' lessons\", as opposed to 3 separate categories for \"Tommy\'s hockey\", \"Trina\'s dance\", and \"swimming lessons\".</string>
    <string name="budget_9">\"Optional\" expenses categories are not necessary in order to use this app, however including them in your BUDGET will give you valuable spending guidelines in your daily life. For example, you will learn how often you can afford to spend money on entertainment or how much money you can afford to spend on gifts.</string>
    <string name="budget_11">You should also adjust your budget any time a major change occurs (i.e. you get a raise at work or the amount of a payment changes).</string>
    <string name="budget_12">You should review and update your budget at least once a year.</string>
    <string name="budget_13">You can use the SPENDING REPORT as a guideline when updating your budget. Running a spending report for an entire year will show you how much you actually spent in each category.</string>
    <string name="budget_14">Updating your budget will not adjust your bank account balances retroactively. The app will simply adjust the percentage of future entries to \'reserve\' for needs in accordance with the changes made to the budget.</string>
    <string name="budget_report_exp">Budget Report - Expenses</string>
    <string name="budget_report_inc">Budget Report - Income</string>
    <string name="cancel">Cancel</string>
    <string name="continue_anyway">Continue anyway?</string>
    <string name="daily_money">Daily Money</string>
    <string name="date">Date</string>
    <string name="debt">Debt</string>
    <string name="delete">Delete this item</string>
    <string name="done">DONE</string>
    <string name="done_entering_items">Done entering items</string>
    <string name="edit">Edit this item</string>
    <string name="enter_bills">Enter bills</string>
    <string name="enter_debt_amount">How much do you owe?</string>
    <string name="enter_limit">What is the credit limit?</string>
    <string name="enter_payments">How much do you usually pay each month?</string>
    <string name="enter_rate">What is the interest rate being charged?</string>
    <string name="help">Help</string>
    <string name="how_often">How often?</string>
    <string name="monthly">Once a month (12 times/yr)</string>
    <string name="name_debt">Name this card or line of credit</string>
    <string name="no">no</string>
    <string name="save">Save</string>
    <string name="savings">Savings</string>
    <string name="set_up">Set Up</string>
    <string name="spending_report">Spending Report</string>
    <string name="title">Title</string>
    <string name="transfer_funds">Transfer Funds</string>
    <string name="update">update</string>
    <string name="warning">warning</string>
    <string name="weekly">Weekly (52 times/yr)</string>
    <string name="yes">yes</string>
    <string name="new_amt">new amount</string>
</resources>