<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_before"
        android:title="@string/set_up"
        android:textColor="@color/colorPrimaryDark"
        />
    <item
        android:id="@+id/menu_daily_money"
        android:icon="@drawable/ic_account_balance_white_24dp"
        android:title="@string/daily_money"
        android:textColor="@color/colorPrimaryDark"/>
    <item
        android:id="@+id/menu_transfers"
        android:icon="@drawable/ic_compare_arrows_black_24dp"
        android:title="@string/transfer_funds" />
    <item
        android:id="@+id/menu_budget"
        android:icon="@drawable/ic_equalizer_black_24dp"
        android:title="@string/budget" />
    <item
        android:id="@+id/menu_debt"
        android:icon="@drawable/ic_payment_black_24dp"
        android:title="@string/debt" />
    <item
        android:id="@+id/menu_savings"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/savings" />
    <item
        android:id="@+id/menu_spending_report"
        android:icon="@drawable/ic_trending_up_black_24dp"
        android:title="@string/spending_report" />
    <item
        android:id="@+id/menu_budget_report_exp"
        android:icon="@drawable/ic_trending_up_black_24dp"
        android:title="@string/budget_report_exp" />
    <item
        android:id="@+id/menu_budget_report_inc"
        android:icon="@drawable/ic_trending_up_black_24dp"
        android:title="@string/budget_report_inc" />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/help" />


</menu>
