<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/warnDialogWarnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/entry_box"
        android:orientation="vertical">

        <TextView
            android:id="@+id/warnDialogWarnTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/warning"
            android:textColor="@color/brightRed"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/warnDialogContTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/continue_anyway"
                android:textColor="@color/brightRed"
                android:textSize="14sp" />

            <Button
                android:id="@+id/warnDialogNoContBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/circle_box"
                android:contentDescription="@string/edit"
                android:text="@string/no"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <Button
                android:id="@+id/warnDialogYesContBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/warnDialogNoContBtn"
                android:background="@drawable/circle_box"
                android:contentDescription="@string/delete"
                android:text="@string/yes"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

