<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/updateDialogLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/entry_box"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dialogUpdateBtn"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/entry_box"
                android:contentDescription="@string/edit"
                android:text="@string/update"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <Button
                android:id="@+id/dialogCancelBtn"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/dialogUpdateBtn"
                android:background="@drawable/entry_box"
                android:contentDescription="@string/delete"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/dialogAmtET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:digits="01234567890.-"
                android:hint="@string/new_amt"
                android:inputType="numberSigned|numberDecimal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

        </RelativeLayout>

    <LinearLayout
        android:id="@+id/dialogWarnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/entry_box"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogWarnTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/warning"
            android:textColor="@color/brightRed"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/dialogContTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/continue_anyway"
                android:textColor="@color/brightRed"
                android:textSize="14sp" />

            <Button
                android:id="@+id/dialogNoContBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/circle_box"
                android:contentDescription="@string/edit"
                android:text="@string/no"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <Button
                android:id="@+id/dialogYesContBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/dialogNoContBtn"
                android:background="@drawable/circle_box"
                android:contentDescription="@string/delete"
                android:text="@string/yes"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

