<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
            android:id="@+id/debtNameEntryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/name_debt"
            android:textSize="16sp" />

            <EditText
                android:id="@+id/debtNameEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/debtLimitEntryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/enter_limit"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/debtLimitEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="numberDecimal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/debtAmountEntryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/enter_debt_amount"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/debtAmountEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="numberDecimal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/debtPercentEntryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/enter_rate"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/debtPercentEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:inputType="numberDecimal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/debtPaymentsEntryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/enter_payments"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/debtPaymentsEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:inputType="numberDecimal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/debtFrequencyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/how_often"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/debtFrequencyRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <RadioButton
                    android:id="@+id/debtWeeklyRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/debtBiWeeklyRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bi_weekly"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/debtMonthlyRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monthly"
                    android:textSize="15sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/debtDateResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/date"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/cancelDebtButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/saveDebtButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/updateDebtButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/update" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>