<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <TextView
                android:id="@+id/frag4HeaderLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:fillViewport="true">

                <ListView
                    android:id="@+id/frag4ListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </ListView>

            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/frag4AddMoreBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/entry_box"
                    android:contentDescription="@string/add_item"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/frag4DoneBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/entry_box"
                    android:contentDescription="@string/done_entering_items"
                    android:gravity="center"
                    android:text="@string/done"
                    android:textColor="@color/colorPrimaryDark"
                    tools:ignore="RelativeOverlap" />

            </LinearLayout>

        </LinearLayout>

</FrameLayout>